--- a/README
+++ b/README
@@ -148,6 +148,25 @@ Enjoy!
 
 Davi de Castro Reis - <davi (a) users sf net>
 
-Robson Braga Araújo - <braga (a) users sf net>
+Robson Braga AraÃºjo - <braga (a) users sf net>
 
 Last Updated: Tue Dec  8 20:37:41 BRST 2015
+
+
+This repository is used for the following project:
+***************************************************************************************************************************************************
+*  DocToText - A multifaceted, data extraction software development toolkit that converts all sorts of files to plain text and html.              *
+*  Written in C++, this data extraction tool has a parser able to convert PST & OST files along with a brand new API for better file processing.  *
+*  To enhance its utility, DocToText, as a data extraction tool, can be integrated with other data mining and data analytics applications.        *
+*  It comes equipped with a high grade, scriptable and trainable OCR that has LSTM neural networks based character recognition.                   *
+*                                                                                                                                                 *
+*  This document parser is able to extract metadata along with annotations and supports a list of formats that include:                           *
+*  DOC, XLS, XLSB, PPT, RTF, ODF (ODT, ODS, ODP), OOXML (DOCX, XLSX, PPTX), iWork (PAGES, NUMBERS, KEYNOTE), ODFXML (FODP, FODS, FODT),           *
+*  PDF, EML, HTML, Outlook (PST, OST), Image (JPG, JPEG, JFIF, BMP, PNM, PNG, TIFF, WEBP) and DICOM (DCM)                                         *
+*                                                                                                                                                 *
+*  Copyright (c) SILVERCODERS Ltd                                                                                                                 *
+*  http://silvercoders.com                                                                                                                        *
+*                                                                                                                                                 *
+*  Project homepage:                                                                                                                              *
+*  http://silvercoders.com/en/products/doctotext                                                                                                  *
+*  https://www.docwire.io/                                                        
